Issue gameboard pg width not 100% on mobile

--- a/src/styles.css
+++ b/src/styles.css
@@ -9,8 +9,8 @@ html, body {
   font-family: Avenir, Helvetica, Arial, sans-serif;
   text-align: center;
   color: #2c3e50;
-  margin-top: 20px;
-  width:100%;
+  width:min-content;
+  margin: 0 2%;
 }
 
  a {
